# Qt

HW10/PreTCPClient/: CMakeLists.txt  mainwindow.cpp  structs.h  tcpclient.cpp  tcpclient.h
HW2/: CMakeLists.txt  main.cpp
HW3/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
HW4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
HW5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
HW6/: CMakeLists.txt  ExampleRace.cpp  mainwindow.cpp  mainwindow.h
HW7/: mainwindow.cpp  mainwindow.h
HW8/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  dbmanager.cpp  dbmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
HW9/: mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
